static/css/common.css
/* Navbar */
/*
.navbar-round {
    height: 45px;
    width: 45px;
    border-radius: 22.5px;
    border: solid 1px #ddd;
    border-color: #ddd !important;
}
.navbar-toggler {
    padding: 11px 12px;
}
*/
@media (min-width: 320px) and (max-width: 570px) {
    .navbar-brand {
        margin-right: 0px;
    }
}
@media (min-width: 570px) and (max-width: 760px) {
    .navbar-nav {
        font-size: 2vw;
        text-align: center;
    }
}
/* Navbar-end */

/* Index */
#reload {
	width: 35px;
	height: 35px;
}
.spinner {
  animation: spin-animation 1s infinite;
  display: inline-block;
}
.answer-btn {
	display: none;
}
@keyframes spin-animation {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(359deg);
  }
}
/* Index-end */

/* Ask */
.ask-form * {
	margin-top: 5px;
}
#button-container {
    margin-top: 10px;
    margin-bottom: 5px;
}
#poll-box {
  margin-bottom: 10px;
}
/* Ask-end */

/* Error */
.err-msg {
    text-align: center;
}
/* Error-end */

/* Profile */
#bio {
    width: 80%;
}
#center1 img {
    max-width: 30vw;
    max-height: 30vh;
    display: block;
}
.blocked-user a {
    float: left;
}
.blocked-user span {
    float: right;
    cursor: pointer;
}
#responses-section, #blocked-section {
	display: none;
}
/* Profile-end */

/* Question */
.response-image {
  max-width: 100%;
  max-height: 400px;
  display: block;
  margin: auto;
}
.vid-container {
  height: 20vw;
  max-height: 350px;
}
.yt-vid {
  position: relative;
  width: 60%;
  height: 100%;
  display: block;
}
.poster-info {
  font-size: 80%;
  display: flex;
  text-decoration: none;
}
.poster-info:hover {
  text-decoration: none;
}
.poster-container, .best-answer-badge {
  margin-bottom: 15px;
}
.best-answer-badge span {
  padding: 6px;
  padding-left: 12px;
  padding-right: 12px;
}
.poster-profile-pic-container,
.poster-text-container {
  display: flex;
  align-items: center;
  padding-right: 6px;
}
.choice.list-group-item:first-child {
  border-top: none;
}
.chooser label {
  cursor: pointer;
  width: 100%;
  margin-bottom: -6px;
}
.progress {
    border: 1px solid #ccc;
}
.choice-show {
    margin-bottom: 5px;
}
.choice.list-group-item:hover, .c {
  background-color: rgba(0, 0, 0, 0);
}
.comments {
  margin-top: 14px !important;
  padding: 10px;
  display: none;
}
.comm-card {
  padding-top: 1.25rem;
}
.comm-form {
  display: flex;
}
.edit-response-textarea {
    margin-top: 12px;
}
#edit-response-form, #upload-photo {
  display: none;
}
.heart-comment {
  display: inline;
}
.hc-icon {
  cursor: pointer;
}
.response-control {
    float: right;
}
.recommended h3 {
  text-align: center;
}
.comment-form {
  flex-grow: 1;
  margin-right: 10px;
}
@media (min-width: 320px) and (max-width: 580px) {
  .r-question {
    width: 95%;
    margin: auto;
  }
  .comm-form .btn {
    margin-top: 4px;
    flex-grow: 1;
  }
  .comment-form {
    margin-right: 0px;
  }
  .vid-container {
    height: 50vw;
    max-height: 300px;
  }
  .yt-vid {
    position: relative;
    width: 90%;
    height: 100%;
    display: block;
  }
}
/* Question-end */

/* General */
.no-horiz-padding {
    padding-left: 0px;
    padding-right: 0px;
}
.card {
    margin-bottom: 2px;
}
#tabs {
	width: 98%;
    max-width: 920px;
	padding-left: 4px;
	padding-right: 4px;
	margin: 1% auto;
	margin-bottom: -1px;
    border-bottom: none;
    overflow-x: auto;
    overflow-y: hidden;
    flex-wrap: nowrap;
}
#tabs li {
	cursor: pointer;
    white-space: nowrap;
}
.form-control {
  border: 1px solid rgba(0,0,0,.125);
}
.vertical-spaced {
    margin-top: 10px;
    margin-bottom: 10px;
    display: block;
}
main {
    width: 60%;
    max-width: 960px;
    margin: auto;
}
.left-spaced {
    margin-left: 5px;
}
.small-text {
    color: #888;
    font-size: 80%;
}
.list-group-item {
  /*Corrige BS*/
  border: none;
  border-top: 1px solid rgba(0, 0, 0, .125);
}

.list-group-item:focus,
.list-group-item:hover {
  /*Corrige BS*/
  z-index: 0;
  text-decoration: none;
}

@media (min-width: 320px) and (max-width: 580px) {
    main, #tabs {
        width: 98%;
    }
}
.float-right {
    float: right;
}
/* General-end */

